<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuickSign">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/quick_sign_fragment_text"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image"
        android:src="@drawable/quick_sign" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/quick_sign_fragment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/quick_sign_fragment_text" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/show_course_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quick_sign_fragment_text"
        android:layout_centerHorizontal="true"
        android:text="@string/show_all_course"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>
