<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/nav_morning"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/account_exit"
        android:layout_width="@dimen/navigation_exit_width"
        android:layout_height="@dimen/navigation_exit_width"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/image"
        android:onClick="MainClick"
        android:src="@drawable/ic_exit" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/account"
        android:layout_width="@dimen/navigation_image_width"
        android:layout_height="@dimen/navigation_image_width"
        android:contentDescription="@string/image"
        android:onClick="MainClick"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/ic_drawer_login" />

    <TextView
        android:id="@+id/nav_header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/nav_sub_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nav_header_title"
        android:text="@string/nav_header_subtitle" />
</RelativeLayout>
